samples/_failures_safe/1761669271_2e011a_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_1cc1a26d.c: In function ‘parser_parse_expression’:
./samples/SAFE/__tmp_1cc1a26d.c:167:35: error: expected ‘)’ at end of input
  167 |     if (parser->current_token.type
      |        ~                          ^
      |                                   )
./samples/SAFE/__tmp_1cc1a26d.c:167:5: error: expected declaration or statement at end of input
  167 |     if (parser->current_token.type
      |     ^~
